# execution-boundary-lab

./: CHANGELOG.md  CLAIM_BOUNDARY.md  PROVENANCE.md  README.md  RECEIPT.md  SPEC.md  pyproject.toml  run_demo.py
.github/workflows/: ci.yml
baseline/: __init__.py  naive_executor.py
cases/: clean_case_1.json  contaminated_case_1.json  contaminated_case_2.json  contaminated_case_3.json  contaminated_case_4.json  contaminated_case_5.json  contaminated_case_6.json
cases/linkedin/decision_absence_gate/: CORE_INVARIANTS.md  FAILURE_MODES.md  META.json  README.md  RESPONSE_PRIMITIVES.md  SIGNAL_ANALYSIS.md  STRUCTURAL_MODEL.md  TESTS.md  THREAD_LOG.md
docs/invariants/: authority-current-at-bind.md
gate_api/: __init__.py  interface.py
reports/: example_trace_with_gate.txt  example_trace_without_gate.txt
sim/: __init__.py  executor.py  logger.py  resources.py
tests/: __init__.py  conftest.py  test_gate_conformance.py  test_prepositioning_failures.py
tests/fixtures/authority/bind-time/: stale_authority.json  valid_authority.json
tests/pseudo/authority/: bind_time_invariant.test.md
